# ama_qcapi

./: README.md  amaqccch.py  api_main.py  cli.py  config.py  dummycch.py  pyproject.toml  qcxfuncs.py  requirements.txt  secureqc.py  subfuncs.py
.github/workflows/: main.yml  static_code_analysis.yml
cchqc/: __init__.py  amaqccch.py  api_main.py  config.py  dummycch.py  qcxfuncs.py  secureqc.py  subfuncs.py
